fix(ci): install Bash 5 for associative array support
Fixed CI test failures caused by Bash 3.2 limitations on macOS.

Problem:
- macOS ships with Bash 3.2 (/bin/bash)
- GitHub Actions runners use system bash by default
- Associative arrays (declare -A) require Bash 4.0+
- Bug fix from c2366c2 uses associative arrays

Solution:
- Install bash via Homebrew (provides Bash 5.x)
- Explicitly run tests with /opt/homebrew/bin/bash
- Add version verification step for debugging

Test failures:
- Before: "declare: -A: invalid option" (2/8 tests failed)
- After: All tests should pass with Bash 5

AI review: code-reviewer (pending)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,24 @@ jobs:
 
       - name: Install dependencies
         run: |
-          brew install yq
+          brew install bash yq
+
+      - name: Detect Bash location and verify version
+        run: |
+          echo "System bash: $(bash --version | head -1)"
+
+          # Detect Homebrew Bash location (Apple Silicon vs Intel)
+          if [ -f /opt/homebrew/bin/bash ]; then
+            BASH_PATH="/opt/homebrew/bin/bash"
+          elif [ -f /usr/local/bin/bash ]; then
+            BASH_PATH="/usr/local/bin/bash"
+          else
+            echo "❌ Homebrew Bash not found"
+            exit 1
+          fi
+
+          echo "Homebrew bash: $($BASH_PATH --version | head -1)"
+          echo "BASH_PATH=$BASH_PATH" >> $GITHUB_ENV
 
       - name: Make script executable
         run: chmod +x transmission-done.sh
@@ -55,8 +72,8 @@ jobs:
           # Create test directories
           mkdir -p "${PLEX_MEDIA_PATH}"
 
-          # Run tests and capture output
-          ./transmission-done.sh 2>&1 | tee test_output.log
+          # Run tests with Bash 5 and capture output
+          $BASH_PATH ./transmission-done.sh 2>&1 | tee test_output.log
 
           # Check test results
           if grep -q "Failed tests: 0" test_output.log; then
