ci(phase8): enable BATS tests in GitHub Actions workflow
Enables BATS test suite in CI/CD pipeline:
- Removed `if: false` condition from bats-tests job
- Added bats-tests to summary job dependencies
- Updated summary to include BATS test results
- Added BATS test status to overall CI status check

CI now runs three test suites:
1. ShellCheck validation (linting)
2. Inline tests (legacy TEST_MODE tests)
3. BATS tests (100+ unit and integration tests)

All three must pass for CI to pass.

Phase: 8.11 (CI enablement)
Phase 8 complete: All 11 sub-phases done
AI review: code-reviewer (pending)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -98,7 +98,6 @@ jobs:
   bats-tests:
     name: BATS Unit Tests
     runs-on: macos-latest
-    if: false  # Disabled until Phase 8 completion
 
     steps:
       - name: Checkout code
@@ -132,7 +131,7 @@ jobs:
   summary:
     name: Test Summary
     runs-on: macos-latest
-    needs: [lint, test]
+    needs: [lint, test, bats-tests]
     if: always()
 
     steps:
@@ -153,9 +152,15 @@ jobs:
             echo "❌ Inline Tests: FAILED" >> $GITHUB_STEP_SUMMARY
           fi
 
+          if [ "${{ needs.bats-tests.result }}" == "success" ]; then
+            echo "✅ BATS Tests: PASSED" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "❌ BATS Tests: FAILED" >> $GITHUB_STEP_SUMMARY
+          fi
+
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "📊 **Overall Status**: ${{ (needs.lint.result == 'success' && needs.test.result == 'success') && 'PASSED' || 'FAILED' }}" >> $GITHUB_STEP_SUMMARY
+          echo "📊 **Overall Status**: ${{ (needs.lint.result == 'success' && needs.test.result == 'success' && needs.bats-tests.result == 'success') && 'PASSED' || 'FAILED' }}" >> $GITHUB_STEP_SUMMARY
 
       - name: Fail if any job failed
-        if: needs.lint.result != 'success' || needs.test.result != 'success'
+        if: needs.lint.result != 'success' || needs.test.result != 'success' || needs.bats-tests.result != 'success'
         run: exit 1
