fix(ci): remove unavailable bats packages from CI install
Removes bats-support and bats-assert from brew install command:
- These packages aren't available as standard Homebrew formulas
- Our tests use custom helpers in test_helper.bash
- Only bats-core is required

Also updated README to reflect correct installation command.

Fixes CI failure in BATS Unit Tests job.

AI review: code-reviewer (pending)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -105,7 +105,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          brew install bats-core bats-support bats-assert yq
+          brew install bats-core yq
 
       - name: Make script executable
         run: chmod +x transmission-done.sh
