--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -98,7 +98,6 @@ jobs:
   bats-tests:
     name: BATS Unit Tests
     runs-on: macos-latest
-    if: false  # Disabled until Phase 8 completion
 
     steps:
       - name: Checkout code
@@ -106,7 +105,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          brew install bats-core bats-support bats-assert yq
+          brew install bats-core yq
 
       - name: Make script executable
         run: chmod +x transmission-done.sh
@@ -132,7 +131,7 @@ jobs:
   summary:
     name: Test Summary
     runs-on: macos-latest
-    needs: [lint, test]
+    needs: [lint, test, bats-tests]
     if: always()
 
     steps:
@@ -153,9 +152,15 @@ jobs:
             echo "❌ Inline Tests: FAILED" >> $GITHUB_STEP_SUMMARY
           fi
 
+          if [ "${{ needs.bats-tests.result }}" == "success" ]; then
+            echo "✅ BATS Tests: PASSED" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "❌ BATS Tests: FAILED" >> $GITHUB_STEP_SUMMARY
+          fi
+
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "📊 **Overall Status**: ${{ (needs.lint.result == 'success' && needs.test.result == 'success') && 'PASSED' || 'FAILED' }}" >> $GITHUB_STEP_SUMMARY
+          echo "📊 **Overall Status**: ${{ (needs.lint.result == 'success' && needs.test.result == 'success' && needs.bats-tests.result == 'success') && 'PASSED' || 'FAILED' }}" >> $GITHUB_STEP_SUMMARY
 
       - name: Fail if any job failed
-        if: needs.lint.result != 'success' || needs.test.result != 'success'
+        if: needs.lint.result != 'success' || needs.test.result != 'success' || needs.bats-tests.result != 'success'
         run: exit 1
